--- a/apps/hercules/Dockerfile
+++ b/apps/hercules/Dockerfile
@@ -8,11 +8,13 @@ RUN apk add --no-cache curl \
 
 WORKDIR /usr/share/app
 
-COPY ["package.json","./"]
+COPY ["package.json", ".npmrc", "./"]
 
-RUN ["pnpm", "install"]
+#RUN ["pnpm", "install"]
 
 COPY [".", "."]
+
+#RUN pnpm prisma generate --schema="./apps/apollo/prisma/schema.prisma"
 
 RUN ["pnpm", "run", "build", "hercules"]
 
