--- a/nginx/api_conf.d/hesita_api.conf
+++ b/nginx/api_conf.d/hesita_api.conf
@@ -2,8 +2,8 @@ location  /hesita/docs {
     # Policy configuration here (authentication, rate limiting, logging...)
     # access_log /var/log/nginx/warehouse_api.log main;
 
-    set $upstream_coeus hesita;
-    proxy_pass http://$upstream_coeus:4004;
+    set $upstream_hesita hesita;
+    proxy_pass http://$upstream_hesita:4004;
     proxy_set_header    X-Forwarded-For $remote_addr;
 }
 
