--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -55,9 +55,10 @@ http {
       resolver 172.0.0.1 valid=30s;
 
       location / {
-        set $upstream_rabbitmq rabbitmq;
-        proxy_pass          http://$upstream_rabbitmq:15672;
-        proxy_set_header    X-Forwarded-For $remote_addr;
+#         set $upstream_rabbitmq rabbitmq;
+#         proxy_pass          http://$upstream_rabbitmq:15672;
+          proxy_pass  http://rabbitmq:15672;
+#         proxy_set_header    X-Forwarded-For $remote_addr;
       }
     }
 }
