--- a/apps/aphrodite/project.json
+++ b/apps/aphrodite/project.json
@@ -5,7 +5,9 @@
   "targets": {
     "build": {
       "executor": "@nrwl/web:webpack",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "defaultConfiguration": "production",
       "options": {
         "compiler": "babel",
@@ -19,9 +21,11 @@
           "apps/aphrodite/src/favicon.ico",
           "apps/aphrodite/src/assets"
         ],
-        "styles": ["apps/aphrodite/src/styles.scss"],
+        "styles": [
+          "apps/aphrodite/src/styles.scss"
+        ],
         "scripts": [],
-        "webpackConfig": "@nrwl/react/plugins/webpack"
+        "webpackConfig": "apps/aphrodite/webpack.config.ts"
       },
       "configurations": {
         "development": {
@@ -65,14 +69,20 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["apps/aphrodite/**/*.{ts,tsx,js,jsx}"]
+        "lintFilePatterns": [
+          "apps/aphrodite/**/*.{ts,tsx,js,jsx}"
+        ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/aphrodite"],
+      "outputs": [
+        "coverage/apps/aphrodite"
+      ],
       "options": {
         "jestConfig": "apps/aphrodite/jest.config.ts",
         "passWithNoTests": true
