--- a/nginx/api_conf.d/apollo_api.conf
+++ b/nginx/api_conf.d/apollo_api.conf
@@ -43,6 +43,16 @@ location /api/image {
     proxy_set_header    X-Forwarded-For $remote_addr;
 }
 
+# location /api/image {
+#     # Policy configuration here (authentication, rate limiting, logging...)
+#     # access_log /var/log/nginx/warehouse_api.log main;
+#
+#     rewrite /api/image(.*) /api/image$1 break;
+#     set $upstream_apollo apollo;
+#     proxy_pass http://$upstream_apollo:4001;
+#     proxy_set_header    X-Forwarded-For $remote_addr;
+# }
+
 location /api/video {
     # Policy configuration here (authentication, rate limiting, logging...)
     # access_log /var/log/nginx/warehouse_api.log main;
