--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cheerio": "1.0.0-rc.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "color.js": "^1.2.0",
     "cookie-parser": "^1.4.6",
     "core-js": "^3.6.5",
     "express": "^4.18.1",
@@ -41,6 +42,7 @@
     "nodemailer": "^6.7.8",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
+    "prisma": "^4.4.0",
     "pug": "^3.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -55,6 +57,7 @@
     "rxjs": "^7.5.6",
     "tslib": "^2.3.0",
     "webpack": "^5.74.0",
+    "webpack-merge": "^5.8.0",
     "winston": "^3.8.1",
     "winston-loki": "^6.0.6",
     "yup": "^0.32.11"
